Fixed 401 responses due to base64 issue